public/assets/css/style.css
/* ... */
blockquote.slogan p {
    display: inline-block;
    padding: 20px 10px;
    font-size: 18px;
}
/* About section homepage */
.about-hollows {
    margin: 0 0 80px 0;
}
.about-hollows .MiVi {
    background-color: #f3f3f3;
    padding: 80px 0 80px 0;
    margin-top: 80px;
}
.about-hollows .MiVi h4 {
    color: rgba(0, 0, 0, 0.8);
    font-weight: 800;
}
.about-hollows .MiVi ul {
    list-style: none;
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
}
.about-hollows .MiVi li {
    display: flex;
    padding-top: 20px;
}
.about-hollows .MiVi li i {
    color: #dd6310;
}

.about-hollows .title-about {
    font-size: 24px;
    font-weight: 600;
    margin-bottom: 20px;
    border-bottom: 1px solid #dd6310;
    width: 100%;
    color: #a1c4bc;
    text-transform: uppercase;
}

.about-hollows img {
    width: 100%;
    height: auto;
    border-radius: 3px;
}

.about-hollows .content-title {
    font-size: 18px;
    color: #a1c4bc;
    font-weight: 600;
    margin-bottom: 12px;
    font-family: Raleway, sans-serif;
    text-transform: uppercase;
}

.about-hollows ul {
    list-style: none;
    margin: 0%;
    padding: 0%;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.about-hollows ul li {
    margin-top: 5px;
}

.about-hollows ul li a {
    text-decoration: none;
    color: #a1c4bc;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: flex-start;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: start;
    border-bottom: 1px solid transparent;
}

.about-hollows ul li a:hover {
    border-bottom: 1px solid #dd6310;
}

.about-hollows .content-title-sub {
    font-size: 1rem;
    color: #a1c4bc;
    font-weight: 600;
    margin-bottom: 20px;
}

.about-hollows p {
    text-align: justify;
    font-weight: 400;
    line-height: 1.8em;
}

/* .introduction */

.introduction {
    margin-bottom: 40px;
}
.introduction p {
    text-align: justify;
}

/* certificate */

.certificate {
    margin: 0 0 80px 0;
}
.certificate .certificate-img {
    transform: scale(1.1);
}
.certificate a {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.certificate a img {
    width: 80%;
    -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
        rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
        rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
    -webkit-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
}

.certificate a img:hover {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}

/*--------------------------------------------------------------
# Team
--------------------------------------------------------------*/
.team {
    margin: 0 0 80px 0;
}
.team .member {
    position: relative;
    -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
    padding: 30px;
    border-radius: 5px;
    background: #fff;
    -webkit-transition: 0.5s;
    transition: 0.5s;
}

.team .member:hover {
    -webkit-transform: translateY(-10px);
    transform: translateY(-10px);
}

.team .member .pic {
    overflow: hidden;
    width: 180px;
    text-align: center !important;
    border-radius: 50%;
    margin: auto;
}

.team .member .pic img {
    -webkit-transition: ease-in-out 0.3s;
    transition: ease-in-out 0.3s;
}

.team .member .member-info {
    padding-left: 30px;
    text-align: center;
}

.team .member h4 {
    font-weight: 700;
    margin-bottom: 5px;
    font-size: 20px;
    color: rgba(0, 0, 0, 0.8);
}

.team .member span {
    display: block;
    font-size: 15px;
    padding-bottom: 10px;
    position: relative;
    font-weight: 500;
}

.team .member span::after {
    content: "";
    position: absolute;
    width: 50px;
    height: 1px;
    background: #cbd6e9;
    bottom: 0;
    left: 0;
    right: 0%;
    margin: auto;
}

.team .member p {
    margin: 10px 0 0 0;
    text-align: center;
}

.team .member .social {
    margin-top: 12px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.team .member .social a {
    -webkit-transition: ease-in-out 0.3s;
    transition: ease-in-out 0.3s;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    border-radius: 50px;
    width: 32px;
    height: 32px;
    background: #fffafa;
    text-decoration: none;
}

.team .member .social a:hover {
    background-color: #dd6310;
}

.team .member .social a:hover i {
    color: white;
}

.team .member .social a i {
    color: #b0c3d2;
    font-size: 16px;
    margin: 0 2px;
}

.team .member .social a + a {
    margin-left: 8px;
}

.service {
    margin: 80px 0;
}

.service .service-box {
    -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
    padding: 30px;
    border-radius: 5px;
    background: #fff;
    -webkit-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
}
.service .service-box a {
    text-decoration: none;
}

.service .service-box:hover {
    -webkit-transform: translateY(-10px);
    transform: translateY(-10px);
}

.service .service-box:hover span {
    background-color: #dd6310 !important;
    color: white !important;
}

.service .service-box .service-box-inner {
    text-align: center;
}

.service .service-box .service-box-inner span {
    color: #f47d34;
    padding: 20px;
    background: #ffebde;
    border-radius: 50%;
    font-size: 50px;
}
/* ... */

